--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Journal App
 
-spring.data.mongodb.uri = mongodb+srv://adityamah2002:database2512@cluster0.y4dtc2q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database = journaldb
+spring.data.mongodb.uri = mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
+spring.data.mongodb.database = ${env.MONGO_DATABASE}
 
 # this will apply indexing to the db
 spring.data.mongodb.auto-index-creation = true
 
-# This file works like a magic just we have to put all the info and it will configure and setup automatically.
+# This file works like a magic just we have to put all the info and, it will configure and setup automatically.
